Add to documentation new responses
